--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^14.11.2",
     "arweave": "^1.9.1",
     "community-js": "^1.1.4",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "typescript": "^4.0.3"
   },
@@ -25,7 +26,8 @@
     "preversion": "yarn run lint",
     "version": "yarn run format && git add -A src",
     "postversion": "git push && git push --tags",
-    "start": "yarn run build && node ./lib/index.js"
+    "start": "yarn run build && node ./lib/index.js",
+    "test": "yarn run build && node ./lib/index_manual.js"
   },
   "license": "GPL-3.0-or-later",
   "author": {
