--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
+    "@limestonefi/api": "^0.1.1",
     "@types/node": "^14.11.2",
     "arweave": "^1.9.1",
     "community-js": "^1.1.4",
