--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@limestonefi/api": "^0.1.1",
+    "@limestonefi/api": "^0.1.2",
     "@types/node": "^14.11.2",
     "arweave": "^1.9.1",
     "community-js": "^1.1.4",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "package.json": "^2.0.1",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
