--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@types/node": "^14.11.2",
-    "arweave": "^1.10.2",
-    "community-js": "^1.1.4",
-    "node-cron": "^2.0.3",
+    "@types/node": "^14.14.34",
+    "arweave": "^1.10.13",
+    "community-js": "^1.1.36",
+    "csv-writer": "^1.6.0",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "package.json": "^2.0.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "prettier": "^2.1.2",
-    "ts-node": "^9.0.0",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0"
   },
@@ -28,7 +29,8 @@
     "version": "yarn run format && git add -A src",
     "postversion": "git push && git push --tags",
     "start": "yarn run build && node ./lib/index.js",
-    "test": "yarn run build && node ./lib/index_manual.js"
+    "test": "yarn run build && node ./lib/index_manual.js",
+    "full-run": "yarn run build && node ./lib/fully_populate.js"
   },
   "license": "GPL-3.0-or-later",
   "author": {
