--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ardrive-analytics",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Pulls different statics for ArDrive usage from Arweave.",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
     "@types/node": "^14.14.34",
+    "ansi-colors": "^4.1.1",
     "arweave": "^1.10.13",
     "community-js": "^1.1.36",
     "csv-writer": "^1.6.0",
+    "limestone-api": "^3.0.4",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "package.json": "^2.0.1",
@@ -30,7 +32,8 @@
     "postversion": "git push && git push --tags",
     "start": "yarn run build && node ./lib/index.js",
     "test": "yarn run build && node ./lib/index_manual.js",
-    "full-run": "yarn run build && node ./lib/fully_populate.js"
+    "full-run": "yarn run build && node ./lib/fully_populate.js",
+    "get-finances": "yarn run build && node ./lib/communityFinanceReport.js"
   },
   "license": "GPL-3.0-or-later",
   "author": {
