--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "@types/node": "^14.14.34",
     "ansi-colors": "^4.1.1",
-    "arweave": "^1.10.13",
-    "community-js": "^1.1.36",
+    "arweave": "^1.10.15",
     "csv-writer": "^1.6.0",
     "limestone-api": "^3.0.4",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "package.json": "^2.0.1",
+    "smartweave": "^0.4.38",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
