--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "@types/node": "^14.14.34",
     "ansi-colors": "^4.1.1",
-    "arweave": "^1.10.23",
+    "arweave": "1.10.16",
     "csv-writer": "^1.6.0",
     "limestone-api": "^3.0.4",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "package.json": "^2.0.1",
-    "redstone-smartweave": "^0.4.10",
+    "redstone-smartweave": "^0.4.15",
     "smartweave": "^0.4.46",
     "typescript": "^4.2.3"
   },
