--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/node": "^14.14.34",
     "ansi-colors": "^4.1.1",
     "arweave": "1.10.16",
+    "axios": "^0.26.0",
+    "axios-retry": "^3.2.4",
     "csv-writer": "^1.6.0",
     "limestone-api": "^3.0.4",
     "node-cron": "^3.0.0",
