--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
   "name": "ardrive-analytics",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Pulls different statics for ArDrive usage from Arweave.",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
     "@types/node": "^14.14.34",
     "ansi-colors": "^4.1.1",
-    "arweave": "^1.10.23",
+    "arweave": "1.11.4",
     "axios": "^0.26.0",
     "axios-retry": "^3.2.4",
     "csv-writer": "^1.6.0",
     "limestone-api": "^3.0.4",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
-    "package.json": "^2.0.1",
-    "smartweave": "^0.4.46",
-    "typescript": "^4.2.3"
+    "typescript": "4.3.5",
+    "warp-contracts": "^1.1.8"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "copyfiles": "^2.4.0",
+    "esbuild": "0.12.5",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^27.4.3",
+    "node-sass": "^6.0.0",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
+    "replace-in-file": "^6.2.0",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0"
   },
   "scripts": {
+    "build": "yarn run clean && yarn run build-ts && npm run cp",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "build": "tsc",
+    "build-ts": "tsc",
+    "clean": "rimraf ./dist",
+    "cp": "copyfiles -u 1 ../lib/**/*.json dist",
     "prepare": "yarn run build",
     "preversion": "yarn run lint",
     "version": "yarn run format && git add -A src",
@@ -36,7 +50,6 @@
     "test": "yarn run build && node ./lib/index_manual.js",
     "full-run": "yarn run build && node ./lib/fully_populate.js",
     "full-run-drives": "yarn run build && node ./lib/fully_populate_drives.js",
-    "get-finances": "yarn run build && node ./lib/communityFinanceReport.js",
     "export-tips": "yarn run build && node ./lib/exportCommunityTips.js",
     "export-astatine-txs": "yarn run build && node ./lib/exportAstatineTransactions.js",
     "export-ardrive-token-holders": "yarn run build && node ./lib/exportArDriveTokenHolders.js",
