--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "CommonJS",
-    "declaration": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "jsx": "preserve",
+    "importHelpers": true,
     "moduleResolution": "node",
-    "outDir": "./lib",
-    "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-    /* Additional Checks */
-    "pretty": true,
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
+    "allowJs": true,
+    "outDir": "./lib",
+    "types": ["jest"],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": ["src"],  
+  "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
