adds new analytics for observers

--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "test": "yarn run build && node ./lib/index_manual.js",
     "full-run": "yarn run build && node ./lib/fully_populate.js",
     "full-run-drives": "yarn run build && node ./lib/fully_populate_drives.js",
+    "full-run-newusers": "yarn run build && node ./lib/fully_populate_l2_newusers.js",
     "full-run-reports": "yarn run build && node ./lib/fully_populate_l2_observerReports.js",
+    "export-arweave-manifests": "yarn run build && node ./lib/exportArweaveManifests.js",
     "export-tips": "yarn run build && node ./lib/exportCommunityTips.js",
     "export-astatine-txs": "yarn run build && node ./lib/exportAstatineTransactions.js",
     "export-ardrive-token-holders": "yarn run build && node ./lib/exportArDriveTokenHolders.js",
@@ -58,6 +60,7 @@
     "export-ardrive-snapshot": "yarn run build && node ./lib/exportArDriveTokenSnapshot.js",
     "export-dust-transaction-report": "yarn run build && node ./lib/dustTransactionReport.js",
     "export-observation-reports": "yarn run build && node ./lib/exportObservationReports.js",
+    "export-network-stats": "yarn run build && node ./lib/exportNetworkStats.js",
     "get-all-folders": "yarn run build && node ./lib/getAllFolders.js",
     "get-all-drives": "yarn run build && node ./lib/getAllDrives.js",
     "get-drive-sizes": "yarn run build && node ./lib/getDriveSizes.js",
