--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "full-run": "yarn run build && node ./lib/fully_populate.js",
     "full-run-drives": "yarn run build && node ./lib/fully_populate_drives.js",
     "full-run-newusers": "yarn run build && node ./lib/fully_populate_l2_newusers.js",
+    "full-run-l1-newusers": "yarn run build && node ./lib/fully_populate_l1_newusers.js",
     "full-run-reports": "yarn run build && node ./lib/fully_populate_l2_observerReports.js",
     "export-arweave-manifests": "yarn run build && node ./lib/exportArweaveManifests.js",
     "export-tips": "yarn run build && node ./lib/exportCommunityTips.js",
